--- a/css/main.css
+++ b/css/main.css
@@ -1128,8 +1128,6 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
-  min-width: 528px;
-  min-height: 581px;
   padding: 40px;
   background-color: #fff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1140,6 +1138,25 @@ body {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 479px) {
+  .modal {
+    width: calc(100% - 30px);
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal__form {
@@ -1283,8 +1300,14 @@ body {
       align-self: center;
   margin-bottom: 30px;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.7143;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__agreement {
+    font-size: 14px;
+  }
 }
 
 .modal__checkbox-icon {
@@ -1372,7 +1395,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 40px;
+  margin-bottom: 25px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
@@ -1381,7 +1404,7 @@ body {
   .filter-list__item:not(:last-child) {
     margin-right: 8px;
   }
-  .filter-list__item:nth-child(-n + 2) {
+  .filter-list__item {
     margin-bottom: 15px;
   }
 }
