--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -25,8 +25,6 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  min-width: 528px;
-  min-height: 581px;
   padding: 40px;
 
   background-color: #fff;
@@ -35,6 +33,19 @@
   border-radius: 4px;
   opacity: 1;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 479px) {
+    width: calc(100% - 30px);
+  }
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    min-width: 528px;
+    min-height: 581px;
+  }
 
   &__form {
     display: flex;
@@ -134,8 +145,12 @@
     margin-bottom: 30px;
 
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.7143;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+    }
   }
 
   &__checkbox-icon {
