--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -2,14 +2,14 @@
   @extend .list;
 
   display: flex;
-  margin-bottom: 40px;
+  margin-bottom: 25px;
   flex-wrap: wrap;
 
   @media screen and (max-width: 767px) {
     &__item:not(:last-child()) {
       margin-right: 8px;
     }
-    &__item:nth-child(-n + 2) {
+    &__item {
       margin-bottom: 15px;
     }
   }
