--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -36,6 +36,10 @@ body {
   text-align: center;
   color: var(--secondary-text-color);
 
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 30px;
+  }
+
   @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
   }
