--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,12 @@ body {
   color: var(--secondary-text-color);
 }
 
+@media screen and (max-width: 1199px) {
+  .section__title {
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .section__title {
     margin-bottom: 50px;
@@ -196,7 +202,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: auto;
+}
+
+@media screen and (max-width: 1199px) {
+  .main-nav {
+    margin-left: auto;
+  }
 }
 
 .menu-conteiner {
@@ -533,15 +544,15 @@ body {
 
 @media screen and (max-width: 767px) {
   .hero {
-    background-image: url("../images/mobile/bg-img-hero.jpg"), -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
-    background-image: url("../images/mobile/bg-img-hero.jpg"), linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/mobile/bg-img-hero.jpg");
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/mobile/bg-img-hero.jpg");
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .hero {
-    background-image: url("../images/tablet/bg-img-hero.jpg"), -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
-    background-image: url("../images/tablet/bg-img-hero.jpg"), linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/tablet/bg-img-hero.jpg");
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/tablet/bg-img-hero.jpg");
   }
 }
 
@@ -550,8 +561,8 @@ body {
     height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: url("../images/desktop/bg-img-hero.jpg"), -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
-    background-image: url("../images/desktop/bg-img-hero.jpg"), linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/desktop/bg-img-hero.jpg");
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/desktop/bg-img-hero.jpg");
     background-size: 1600px, cover;
   }
 }
@@ -564,6 +575,13 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-white-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36363;
+  }
 }
 
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
@@ -588,7 +606,13 @@ body {
 }
 
 .features {
-  padding-bottom: 0;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .features {
+    padding-bottom: 0;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -603,8 +627,7 @@ body {
 
 @media screen and (max-width: 1199px) {
   .features-list {
-    margin-left: -15px;
-    margin-right: -15px;
+    margin: -15px;
   }
 }
 
@@ -724,8 +747,7 @@ body {
 
 @media screen and (max-width: 1199px) {
   .team-list {
-    margin-left: -15px;
-    margin-right: -15px;
+    margin: -15px;
   }
 }
 
@@ -836,8 +858,7 @@ body {
 
 @media screen and (max-width: 1199px) {
   .clients-list {
-    margin-left: -15px;
-    margin-right: -15px;
+    margin: -15px;
   }
 }
 
@@ -1395,7 +1416,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 25px;
+  margin-bottom: 40px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
@@ -1404,7 +1425,7 @@ body {
   .filter-list__item:not(:last-child) {
     margin-right: 8px;
   }
-  .filter-list__item {
+  .filter-list__item:nth-child(-n + 2) {
     margin-bottom: 15px;
   }
 }
@@ -1470,8 +1491,8 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .projects__item:nth-last-child(-n + 2) {
+@media screen and (max-width: 1199px) {
+  .projects__item:last-child {
     margin-bottom: 0;
   }
 }
