--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -5,8 +5,7 @@
   flex-wrap: wrap;
 
   @media screen and (max-width: 1199px) {
-    margin-left: -15px;
-    margin-right: -15px;
+    margin: -15px;
   }
 
   &__item {
