--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,6 +1,11 @@
 .features {
-  padding-bottom: 0;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 0;
+  }
 }
+
 .features-list {
   @extend .list;
 
@@ -10,8 +15,7 @@
   }
 
   @media screen and (max-width: 1199px) {
-    margin-left: -15px;
-    margin-right: -15px;
+    margin: -15px;
   }
 
   &__item {
