--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -17,7 +17,9 @@
 }
 .main-nav {
   display: flex;
-  margin-left: auto;
+  @media screen and (max-width: 1199px) {
+    margin-left: auto;
+  }
 }
 
 .menu-conteiner {
