--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -12,21 +12,21 @@
   text-align: center;
 
   @media screen and (max-width: 767px) {
-    background-image: url('../images/mobile/bg-img-hero.jpg'),
-      linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/mobile/bg-img-hero.jpg');
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    background-image: url('../images/tablet/bg-img-hero.jpg'),
-      linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/tablet/bg-img-hero.jpg');
   }
 
   @media screen and (min-width: 1200px) {
     height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: url('../images/desktop/bg-img-hero.jpg'),
-      linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/desktop/bg-img-hero.jpg');
     background-size: 1600px, cover;
   }
 
@@ -38,6 +38,11 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--primary-white-color);
+
+    @media screen and(min-width:1200px) {
+      font-size: 44px;
+      line-height: 1.36363;
+    }
   }
 }
 
