--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -2,14 +2,14 @@
   @extend .list;
 
   display: flex;
-  margin-bottom: 25px;
+  margin-bottom: 40px;
   flex-wrap: wrap;
 
   @media screen and (max-width: 767px) {
     &__item:not(:last-child()) {
       margin-right: 8px;
     }
-    &__item {
+    &__item:nth-child(-n + 2) {
       margin-bottom: 15px;
     }
   }
@@ -39,6 +39,8 @@
   }
 
   &__item {
+    margin-bottom: 30px;
+
     @media screen and (min-width: 768px) {
       margin-right: 30px;
       width: calc((100% - 30px) / 2);
@@ -47,8 +49,6 @@
       margin-right: 30px;
       width: calc((100% - 60px) / 3);
     }
-
-    margin-bottom: 30px;
 
     &:nth-child(2n) {
       @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -60,8 +60,8 @@
         margin-right: 0;
       }
     }
-    &:nth-last-child(-n + 2) {
-      @media screen and (min-width: 768px) and (max-width: 1199px) {
+    &:last-child() {
+      @media screen and (max-width: 1199px) {
         margin-bottom: 0;
       }
     }
