--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -9,8 +9,7 @@
     flex-wrap: wrap;
   }
   @media screen and (max-width: 1199px) {
-    margin-left: -15px;
-    margin-right: -15px;
+    margin: -15px;
   }
   &__item {
     background: #ffffff;
